Bug 81381 - FILESAVE: Objects:Icon is not editable after LO Export
Summary: FILESAVE: Objects:Icon is not editable after LO Export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Ravindra Vidhate
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-15 10:55 UTC by Ravindra Vidhate
Modified: 2014-07-29 18:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original File (50.45 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-15 10:55 UTC, Ravindra Vidhate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-07-15 10:55:50 UTC
Created attachment 102846 [details]
Original File

Problem description: 
Open the attached docx file containg Object:Icon "<o:OLEObject DrawAspect="Icon"/>". Export the docx file using LO. The DrawAspect is not getting preserved.

Steps to reproduce:
1. Open the attached docx file which will have OLEObject with DrawAspect="Icon"
2. Export the file in docx file format.
3. Open the exported file in MS-Office and double click on the object Icon. The object doesn't open the ppt associated with it. Because DrawAspect="Icon" property of the OLEObject is not getting prserved.

Current behavior:
The DrawAspect="Content" property is getting exported as "Content" is the hard code value.

Expected behavior:
DrawAspect="Icon" should be preserved.
              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 Jorendc 2014-07-15 11:59:55 UTC
Synerzip -> NEW
Comment 2 Commit Notification 2014-07-21 15:01:02 UTC
Ravindra_Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ed122f34275f4b4afd1a84d3b5254e4a814ba43

fdo#81381  Objects:Icon is not editable after LO Export



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.