fdo#81381  Objects:Icon is not editable after LO Export

The Object's DrawAspect  ="Icon" is not getting preserved.
Open the exported file in MS-Office and double click on the object Icon.
The object doesn't open the ppt associated with it.
Because DrawAspect="Icon" property of the OLEObject is not getting prserved.
The DrawAspect="Content" property is getting exported as "Content" is the hard code value.

Change-Id: I2f1cbdbb4931657115f6a657b43a1cab3c5369a6
Reviewed-on: https://gerrit.libreoffice.org/10356
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
Tested-by: Luboš Luňák <l.lunak@collabora.com>